# internal/api/user/user.go
@@ -4,7 +4,7 @@ import "github.com/codfrm/cago/server/mux"
 
 // CurrentUserRequest 获取当前登录的用户信息
 type CurrentUserRequest struct {
-	mux.Meta `path:"/user" method:"GET"`
+	mux.Meta `path:"/users" method:"GET"`
 }
 
 type CurrentUserResponse struct {
@@ -13,7 +13,7 @@ type CurrentUserResponse struct {
 
 // InfoRequest 获取指定用户信息
 type InfoRequest struct {
-	mux.Meta `path:"/user/:uid/info" method:"GET"`
+	mux.Meta `path:"/users/:uid/info" method:"GET"`
 	UID      int64 `uri:"uid" binding:"required"`
 }
 
