# internal/controller/user_ctr/user.go
@@ -2,7 +2,9 @@ package user_ctr
 
 import (
 	"context"
+	"time"
 
+	"github.com/gin-gonic/gin"
 	api "github.com/scriptscat/scriptlist/internal/api/user"
 	"github.com/scriptscat/scriptlist/internal/service/user_svc"
 )
@@ -15,10 +17,34 @@ func NewUser() *User {
 }
 
 // CurrentUser 获取当前登录的用户信息
-func (u *User) CurrentUser(ctx context.Context, req *api.CurrentUserRequest) (*api.CurrentUserResponse, error) {
+func (u *User) CurrentUser(gctx *gin.Context, req *api.CurrentUserRequest) (*api.CurrentUserResponse, error) {
+	ctx := gctx.Request.Context()
 	resp, err := user_svc.User().UserInfo(ctx, user_svc.Auth().Get(ctx).UID)
 	if err != nil {
 		return nil, err
+	}
+	loginId, err := gctx.Cookie("login_id")
+	if err != nil {
+		return nil, err
+	}
+	token, err := gctx.Cookie("token")
+	if err != nil {
+		return nil, err
+	}
+	// 获取token信息, 判断是否需要刷新
+	m, err := user_svc.Auth().GetLoginToken(ctx, user_svc.Auth().Get(ctx).UID, loginId, token)
+	if err != nil {
+		return nil, err
+	}
+	if m.Updatetime+user_svc.TokenAutoRegen < time.Now().Unix() {
+		// 刷新token
+		m, err = user_svc.Auth().Refresh(ctx, user_svc.Auth().Get(ctx).UID, loginId, token)
+		if err != nil {
+			return nil, err
+		}
+		// 设置cookie
+		gctx.SetCookie("login_id", m.ID, user_svc.TokenAuthMaxAge, "/", "", false, true)
+		gctx.SetCookie("token", m.Token, user_svc.TokenAuthMaxAge, "/", "", false, true)
 	}
 	return &api.CurrentUserResponse{InfoResponse: resp}, nil
 }
