# internal/model/entity/script_entity/search.go
@@ -1,4 +1,4 @@
-package model
+package script_entity
 
 import (
 	"bytes"
@@ -40,21 +40,22 @@ PUT _index_template/scriptlist.script
 */
 
 type ScriptSearch struct {
-	ID            int64    `json:"id"`
-	UserID        int64    `json:"user_id"`
-	Name          string   `json:"name"`
-	Description   string   `json:"description"`
-	Content       string   `json:"content"`
-	Changelog     string   `json:"changelog"`
-	TotalDownload int64    `json:"total_download"`
-	TodayDownload int64    `json:"today_download"`
-	Score         float64  `json:"score"`
-	Category      []int64  `json:"category"`
-	Domain        []string `json:"domain"`
-	Public        int      `json:"public"`
-	Unwell        int      `json:"unwell"`
-	Createtime    int64    `json:"createtime"`
-	Updatetime    int64    `json:"updatetime"`
+	ID            int64         `json:"id"`
+	UserID        int64         `json:"user_id"`
+	Name          string        `json:"name"`
+	Description   string        `json:"description"`
+	Content       string        `json:"content"`
+	Version       string        `json:"version"`
+	Changelog     string        `json:"changelog"`
+	TotalDownload int64         `json:"total_download"`
+	TodayDownload int64         `json:"today_download"`
+	Score         float64       `json:"score"`
+	Category      []int64       `json:"category"`
+	Domain        []string      `json:"domain"`
+	Public        Public        `json:"public"`
+	Unwell        UnwellContent `json:"unwell"`
+	Createtime    int64         `json:"createtime"`
+	Updatetime    int64         `json:"updatetime"`
 }
 
 func (s *ScriptSearch) CollectionName() string {
